Pequena correção à função readMove2(Relates to #13)